- updating ultra sonic sensor for arduino firmdata upgrade